--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
               Account
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="http://127.0.0.1:5500/BOOTSTRAP/signin.html#pills-signin">Sing In</a></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:5500/signin.html">Sing In</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:5500/BOOTSTRAP/signin.html#pills-register">Sing Up</a></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:5500/signin.html">Sing Up</a></li>
             </ul>
           </li>
         </div>
@@ -46,16 +46,16 @@
         <div class="card" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Produkty</h5>
+            <p class="card-text">Prodáváme vysoce kvalitní zvuková zařízení.</p>
+            <a href="#" class="btn btn-primary">Pro nákup klikněte zde</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Opravy</h5>
+            <p class="card-text">Opravujeme</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
