--- a/signup.html
+++ b/signup.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <nav class="navbar px-4">
-    <a class="navbar-brand" href="http://127.0.0.1:5500/BOOTSTRAP/index.html">QuickSound</a>
+    <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">QuickSound</a>
   </nav>
 
   <div class="toggle-buttons">
-    <a href="http://127.0.0.1:5500/BOOTSTRAP/signin.html" class="btn btn-outline-warning me-2">Sign In</a>
-    <a href="http://127.0.0.1:5500/BOOTSTRAP/signup.html" class="btn btn-outline-warning">Sign Up</a>
+    <a href="http://127.0.0.1:5500/signin.html" class="btn btn-outline-warning me-2">Sign In</a>
+    <a href="http://127.0.0.1:5500/signup.html" class="btn btn-outline-warning">Sign Up</a>
   </div>
 
   <div id="signupForm" class="form-container form-section active">
