--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="http://127.0.0.1:5500/BOOTSTRAP/index.html">QuickSound</a>
+        <a class="navbar-brand" href="http://127.0.0.1:5500/index.html">QuickSound</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
