--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/styl.css">
+    <link rel="stylesheet" href="style products/style.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-dark">
@@ -17,10 +17,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="http://127.0.0.1:5500/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://127.0.0.1:5500/products.html">Products</a>
+              <a class="nav-link active" href="http://127.0.0.1:5500/products.html">Products</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -43,31 +43,24 @@
     <div class="container text-center">
       <div class="row">
         <div class="card" style="width: 20rem;">
-          <img src="images/Maxie.png" class="card-img-top card-img-bottom" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Produkty</h5>
-            <p class="card-text">Prodáváme vysoce kvalitní zvuková zařízení.</p>
-            <a href="http://127.0.0.1:5500/products.html" class="btn btn-primary">Pro nákup klikněte zde</a>
+            <img src="images/Maxie.png" class="card-img-top card-img-bottom" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Maxie</h5>
+              <p class="card-text">Velké kytarové kombo, které vám svým skvělím zvukem odpálí sluch.</p>
+              <a href="http://127.0.0.1:5500/products.html" class="btn btn-primary">Zakoupit</a>
+            </div>
           </div>
-        </div>
-        <div class="card" style="width: 20rem;">
-          <img src="images/Servis.png" class="card-img-top card-img-bottom" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Opravy</h5>
-            <p class="card-text">Opravujeme starou nebo rozbitou techniku.</p>
-            <a href="#" class="btn btn-primary">Rezervujte ještě dnes</a>
+          <div class="card" style="width: 20rem;">
+            <img src="images/Quickie.png" class="card-img-top card-img-bottom" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Quickie</h5>
+              <p class="card-text">Už jste někdy slyšli Bednu od wisky vestylu Metallici? Ne? Já také ne, ale s tímto malým kompaktním přenosným kombem to je možné.</p>
+              <a href="#" class="btn btn-primary">Zakoupit</a>
+            </div>
           </div>
-        </div>
-        <div class="card" style="width: 20rem;">
-          <img src="images/Reselling.png" class="card-img-top card-img-bottom" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Bazar</h5>
-            <p class="card-text">Přeprodáváme vaší vámi nepotřebovanou techniku.</p>
-            <a href="#" class="btn btn-primary">Pro prodej či nákup klikněte zde</a>
-          </div>
-        </div>
       </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
